--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -75,8 +75,7 @@
                         android:textColor="?attr/colorPrimary"
                         android:layout_marginBottom="4dp"/>
 
-                    <TextView
-                        android:id="@+id/emailText"
+                    <TextVieandroid:id="@+id/emailText"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:textSize="16sp"
