--- a/app/src/main/res/layout/activity_book_list.xml
+++ b/app/src/main/res/layout/activity_book_list.xml
@@ -18,11 +18,12 @@
 
     </com.google.android.material.appbar.AppBarLayout>
 
-    <anandroid:padding="8dp"droidx.recyclerview.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/booksRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clipToPadding="false"
+        android:padding="8dp"
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
