--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -15,9 +15,9 @@
                 <item
                     android:color="#44000000"
                     android:offset="0.0" />
-                <item
+                < android:offset="1.0" />item
                     android:color="#00000000"
-                    android:offset="1.0" />
+
             </gradient>
         </aapt:attr>
     </path>
