--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,10 @@
     <color name="secondary">#FF03DAC5</color>
     <color name="secondary_variant">#FF018786</color>
 
-
+    <!-- Background colors -->
+    <color name="background">#FFFFFFFF</color>
+    <color name="surface">#FFFFFFFF</color>
+    <color name="error">#FFB00020</color>
 
     <!-- Text colors -->
     <color name="on_primary">#FFFFFFFF</color>
