--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,17 +17,17 @@
     <color name="surface">#FFFFFFFF</color>
     <color name="error">#FFB00020</color>
 
-
-
-    <!-- Additional colors -->
-    <color name="divider">#1F000000</color>
-    <color name="ripple">#1F000000</color>
-    <color  <!-- Text colors -->
+    <!-- Text colors -->
     <color name="on_primary">#FFFFFFFF</color>
     <color name="on_secondary">#FF000000</color>
     <color name="on_background">#FF000000</color>
     <color name="on_surface">#FF000000</color>
-    <color name="on_error">#FFFFFFFF</color> name="card_background">#FFF5F5F5</color>
+    <color name="on_error">#FFFFFFFF</color>
+
+    <!-- Additional colors -->
+    <color name="divider">#1F000000</color>
+    <color name="ripple">#1F000000</color>
+    <color name="card_background">#FFF5F5F5</color>
     <color name="text_primary">#DE000000</color>
     <color name="text_secondary">#99000000</color>
     <color name="text_hint">#61000000</color>
